--- a/src/assets/scss/mixin.scss
+++ b/src/assets/scss/mixin.scss
@@ -10,3 +10,15 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+@mixin extend-click() {
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+  }
+}
